WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281208
Ignore subscriptshift/superscriptshift when CoreMathML is enabled
https://bugs.webkit.org/show_bug.cgi?id=281208
Summary
Ignore subscriptshift/superscriptshift when CoreMathML is enabled
Frédéric Wang (:fredw)
Reported
2024-10-10 01:42:27 PDT
We should return a default Length when CoreMathML is enabled here:
https://searchfox.org/wubkat/rev/168430191bc069c153b23fdddfc818adea1f2992/Source/WebCore/mathml/MathMLScriptsElement.cpp#70
Test:
https://wpt.fyi/results/mathml/presentation-markup/scripts/subsup-legacy-scriptshift-attributes-001.tentative.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-17 01:43:14 PDT
<
rdar://problem/138099246
>
Eri
Comment 2
2025-09-29 03:14:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51494
EWS
Comment 3
2025-10-01 02:39:29 PDT
Committed
300817@main
(4077efe2bdb9): <
https://commits.webkit.org/300817@main
> Reviewed commits have been landed. Closing PR #51494 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug