Ignore subscriptshift/superscriptshift when MathML Core is enabled https://bugs.webkit.org/show_bug.cgi?id=281208

Reviewed by Frédéric Wang.

Return a default Length for subscriptShift and superscriptShift when the
CoreMathML preference is on.

Tests: mathml/non-core/msub-subscriptshift.html
       mathml/non-core/msubsup-subscriptshift.html
       mathml/non-core/msubsup-superscriptshift.html
       mathml/non-core/msup-superscriptshift.html
       mathml/non-core/multiscript-subscriptshift.html
       mathml/non-core/multiscript-superscriptshift.html
* LayoutTests/TestExpectations:
* LayoutTests/mathml/non-core/msub-subscriptshift-expected.txt: Renamed from LayoutTests/mathml/presentation/msub-subscriptshift-expected.txt.
* LayoutTests/mathml/non-core/msub-subscriptshift.html: Renamed from LayoutTests/mathml/presentation/msub-subscriptshift.html.
* LayoutTests/mathml/non-core/msubsup-subscriptshift-expected.txt: Renamed from LayoutTests/mathml/presentation/msubsup-subscriptshift-expected.txt.
* LayoutTests/mathml/non-core/msubsup-subscriptshift.html: Renamed from LayoutTests/mathml/presentation/msubsup-subscriptshift.html.
* LayoutTests/mathml/non-core/msubsup-superscriptshift-expected.txt: Renamed from LayoutTests/mathml/presentation/msubsup-superscriptshift-expected.txt.
* LayoutTests/mathml/non-core/msubsup-superscriptshift.html: Renamed from LayoutTests/mathml/presentation/msubsup-superscriptshift.html.
* LayoutTests/mathml/non-core/msup-superscriptshift-expected.txt: Renamed from LayoutTests/mathml/presentation/msup-superscriptshift-expected.txt.
* LayoutTests/mathml/non-core/msup-superscriptshift.html: Renamed from LayoutTests/mathml/presentation/msup-superscriptshift.html.
* LayoutTests/mathml/non-core/multiscript-subscriptshift-expected.txt: Renamed from LayoutTests/mathml/presentation/multiscript-subscriptshift-expected.txt.
* LayoutTests/mathml/non-core/multiscript-subscriptshift.html: Renamed from LayoutTests/mathml/presentation/multiscript-subscriptshift.html.
* LayoutTests/mathml/non-core/multiscript-superscriptshift-expected.txt: Renamed from LayoutTests/mathml/presentation/multiscript-superscriptshift-expected.txt.
* LayoutTests/mathml/non-core/multiscript-superscriptshift.html: Renamed from LayoutTests/mathml/presentation/multiscript-superscriptshift.html.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/mathml/MathMLScriptsElement.cpp:
(WebCore::MathMLScriptsElement::subscriptShift):
(WebCore::MathMLScriptsElement::superscriptShift):
* Source/WebCore/rendering/mathml/RenderMathMLScripts.cpp:
(WebCore::RenderMathMLScripts::verticalMetrics):

Canonical link: https://commits.webkit.org/300817@main